k8s/option1-standalone/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spark-platform
  labels:
    name: spark-platform
    app: whereq-libra
